# gatekept-traffic-PoC

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  readme.org
comms/: post.org
nix/: format.nix  python.nix  shells.nix
nix/crates/: default.nix  site.nix
src.py/: .envrc  README.md  pyproject.toml
src.py/src/gatekeep/: __init__.py
src.py/src/gatekeep/alpha/: README.md  gatekeeper.py  observe_trajectories.py  specification.py  world.py
src.py/src/gatekeep/controller/: __init__.py  random.py
src.py/src/gatekeep/gamma/: __init__.py
src.py/src/gatekeep/logic/: __init__.py  linear_temporal.py  semantics.py
src.py/tests/: test_gamma_lwr.py
src.rs/: .envrc  .gitignore  Cargo.toml  Settings.toml  Trunk.toml
src.rs/abm/: Cargo.toml
src.rs/abm/src/: car.rs  intersection.rs  lib.rs  light.rs  simulation.rs
src.rs/cli/: Cargo.toml
src.rs/cli/src/: main.rs
src.rs/holodeck/: Cargo.toml
src.rs/holodeck/proptest-regressions/traffic/: simulation.txt
src.rs/holodeck/src/: cfg.rs  gatekeeper.rs  lib.rs
src.rs/holodeck/src/data/: mod.rs  nodup_stack.rs  prng.rs
src.rs/holodeck/src/logic/: bounds.rs  interpreter.rs  mod.rs  syntax.rs  types.rs
src.rs/holodeck/src/traffic/: car.rs  intersection.rs  mod.rs  simulation.rs  trajectory.rs
src.rs/logic/src/: lang.rs  lib.rs
src.rs/prism/: Cargo.toml  readme.org
src.rs/site/: Cargo.toml  index.html
src.rs/site/src/: main.rs
src.rs/site/src/components/: mod.rs  pixels.rs  sim.rs
src/gatekeep/: __init__.py  __main__.py  abcs.py
src/gatekeep/alpha/: observe_trajectories.py  simulation.py
src/gatekeep/beta/: README.md
src/gatekeep/beta/world/: utils.py
src/gatekeep/beta/world/single_intersection/: main.net.xml
src/gatekeep/controller/: random.py
src/gatekeep/gamma/: README.md  __init__.py  lwr.py  lwr2.py  lwr3.py
src/gatekeep/logic/: evaluate.py
src/gatekeep/traffic_light/: __init__.py  gatekeeper.py  net.py  observe_trajectories.py  simulation.py  specification.py  types.py  world.py
src/gatekeep/traffic_light/world/: utils.py
src/gatekeep/traffic_light/world/single_intersection/: main.rou.xml
tests/: test_gamma_model.py
