[package]
name = "holodeck"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
config = "0.14.0"
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
wasm-bindgen = "0.2.92"
winit = "0.30.3"

[dev-dependencies]
proptest = "1.5.0"
test-case = "3.3.1"
