[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
abm = { path = "./../abm" }
yew = { version = "0.21.0", features = [ "csr" ] }
yew-router = "0.18"
wasm-bindgen = "0.2"
# rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
gloo = "0.11"
gloo-net = "0.5"
# web-sys = "0.3"
