[package]
name = "site"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
holodeck = { path = "./../holodeck" }
yew = { version = "0.21.0", features = [ "csr" ] }
yew-router = "0.18"
wasm-bindgen = "0.2"
# rocket = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
gloo = "0.11"
gloo-net = "0.5"
gloo-timers = "0.2"
web-sys = { version = "0.3", features = [ "HtmlCanvasElement" ] }
pixels = "0.13.0"
